# face_verification

./: README.md  __init__.py  pyproject.toml
benchmark/: benchmark.ipynb
faceverification/: README.md  __init__.py  pyproject.toml  requirements.txt  verify.py
faceverification/detection/: __init__.py  detector_base.py  facenet_detector.py
faceverification/distance/: __init__.py  metrics.py
faceverification/embedding/: __init__.py  embedding_base.py  facenet_embedding.py
faceverification/exceptions/: __init__.py  exceptions.py
faceverification/faceverification/: __init__.py
faceverification/faceverification/detection/: __init__.py
faceverification/faceverification/utils/: __init__.py
faceverification/faceverification/verification/: __init__.py  verificator_base.py
faceverification/utils/: image.py
faceverification/verification/: __init__.py  verificator_base.py
rest_api/: Dockerfile  docker-entrypoint.sh  main.py
