[tool.poetry]
name = "faceverification"
version = "1.1.0"
description = "Face verification library"
authors = ["Igor Avdonin <avdonin.pb@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.0.2"
numpy = "^1.22.3"
facenet-pytorch = "^2.5.2"
fastapi = {version = "^0.77.1", optional = true, extras = ["rest_api"]}
uvicorn = {version = "^0.17.6", optional = true, extras = ["rest_api"]}
pydantic = {version = "^1.9.0", optional = true, extras = ["rest_api"]}
opencv-python-headless = "^4.5.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.8"

[tool.poetry.extras]
rest_api = ["fastapi^0.77.1", "uvicorn^0.17.6", "pydantic^1.9.0"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
