[tool.poetry]
name = "faceverification"
version = "0.1.0"
description = "Face verification library"
authors = ["Igor Avdonin <avdonin.pb@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.0.2"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
facenet-pytorch = "^2.5.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
